build/log/idf_py_stdout_output_3340407
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/pepe/code/embeded/hello-world/build/bootloader && /home/pepe/.espressif/python_env/idf6.0_py3.10_env/bin/python /home/pepe/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/pepe/code/embeded/hello-world/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/sensor.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/sensor.c.obj 
/home/pepe/.espressif/tools/xtensa-esp-elf/esp-15.1.0_20250607/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0-dev-2367-g5c5eb99eab\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/pepe/code/embeded/hello-world/build/config -I/home/pepe/code/embeded/hello-world/main -I/home/pepe/esp/esp-idf/components/esp_libc/platform_include -I/home/pepe/esp/esp-idf/components/freertos/config/include -I/home/pepe/esp/esp-idf/components/freertos/config/include/freertos -I/home/pepe/esp/esp-idf/components/freertos/config/xtensa/include -I/home/pepe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/pepe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/pepe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/pepe/esp/esp-idf/components/freertos/esp_additions/include -I/home/pepe/esp/esp-idf/components/esp_hw_support/include -I/home/pepe/esp/esp-idf/components/esp_hw_support/include/soc -I/home/pepe/esp/esp-idf/components/esp_hw_support/dma/include -I/home/pepe/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/pepe/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/pepe/esp/esp-idf/components/esp_hw_support/etm/include -I/home/pepe/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/pepe/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/pepe/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/pepe/esp/esp-idf/components/esp_hw_support/modem/include -I/home/pepe/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/pepe/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/pepe/esp/esp-idf/components/heap/include -I/home/pepe/esp/esp-idf/components/heap/tlsf -I/home/pepe/esp/esp-idf/components/log/include -I/home/pepe/esp/esp-idf/components/soc/include -I/home/pepe/esp/esp-idf/components/soc/esp32 -I/home/pepe/esp/esp-idf/components/soc/esp32/include -I/home/pepe/esp/esp-idf/components/soc/esp32/register -I/home/pepe/esp/esp-idf/components/hal/platform_port/include -I/home/pepe/esp/esp-idf/components/hal/esp32/include -I/home/pepe/esp/esp-idf/components/hal/include -I/home/pepe/esp/esp-idf/components/esp_rom/include -I/home/pepe/esp/esp-idf/components/esp_rom/esp32/include -I/home/pepe/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/pepe/esp/esp-idf/components/esp_rom/esp32 -I/home/pepe/esp/esp-idf/components/esp_common/include -I/home/pepe/esp/esp-idf/components/esp_system/include -I/home/pepe/esp/esp-idf/components/esp_system/port/soc -I/home/pepe/esp/esp-idf/components/esp_system/port/include/private -I/home/pepe/esp/esp-idf/components/xtensa/esp32/include -I/home/pepe/esp/esp-idf/components/xtensa/include -I/home/pepe/esp/esp-idf/components/xtensa/deprecated_include -I/home/pepe/esp/esp-idf/components/lwip/include -I/home/pepe/esp/esp-idf/components/lwip/include/apps -I/home/pepe/esp/esp-idf/components/lwip/include/apps/sntp -I/home/pepe/esp/esp-idf/components/lwip/lwip/src/include -I/home/pepe/esp/esp-idf/components/lwip/port/include -I/home/pepe/esp/esp-idf/components/lwip/port/freertos/include -I/home/pepe/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/pepe/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/pepe/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/pepe/esp/esp-idf/components/esp_adc/include -I/home/pepe/esp/esp-idf/components/esp_adc/interface -I/home/pepe/esp/esp-idf/components/esp_adc/esp32/include -I/home/pepe/esp/esp-idf/components/driver/deprecated -I/home/pepe/esp/esp-idf/components/driver/i2c/include -I/home/pepe/esp/esp-idf/components/driver/touch_sensor/include -I/home/pepe/esp/esp-idf/components/driver/twai/include -I/home/pepe/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/pepe/esp/esp-idf/components/esp_pm/include -I/home/pepe/esp/esp-idf/components/esp_ringbuf/include -I/home/pepe/esp/esp-idf/components/esp_driver_gpio/include -I/home/pepe/esp/esp-idf/components/esp_driver_pcnt/include -I/home/pepe/esp/esp-idf/components/esp_driver_gptimer/include -I/home/pepe/esp/esp-idf/components/esp_driver_spi/include -I/home/pepe/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/pepe/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/pepe/esp/esp-idf/components/esp_driver_i2s/include -I/home/pepe/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/pepe/esp/esp-idf/components/esp_driver_sdmmc/legacy/include -I/home/pepe/esp/esp-idf/components/esp_driver_sd_intf/include -I/home/pepe/esp/esp-idf/components/sdmmc/include -I/home/pepe/esp/esp-idf/components/esp_driver_sdspi/include -I/home/pepe/esp/esp-idf/components/esp_driver_sdio/include -I/home/pepe/esp/esp-idf/components/esp_driver_dac/include -I/home/pepe/esp/esp-idf/components/esp_driver_rmt/include -I/home/pepe/esp/esp-idf/components/esp_driver_tsens/include -I/home/pepe/esp/esp-idf/components/esp_driver_sdm/include -I/home/pepe/esp/esp-idf/components/esp_driver_i2c/include -I/home/pepe/esp/esp-idf/components/esp_hal_i2c/esp32/include -I/home/pepe/esp/esp-idf/components/esp_hal_i2c/include -I/home/pepe/esp/esp-idf/components/esp_driver_uart/include -I/home/pepe/esp/esp-idf/components/vfs/include -I/home/pepe/esp/esp-idf/components/esp_driver_ledc/include -I/home/pepe/esp/esp-idf/components/esp_driver_parlio/include -I/home/pepe/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/pepe/esp/esp-idf/components/esp_driver_twai/include -I/home/pepe/code/embeded/hello-world/components/ssd1306/include -mlongcalls -Wno-frame-address -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero  -g -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/pepe/code/embeded/hello-world=. -fmacro-prefix-map=/home/pepe/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/sensor.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/sensor.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/sensor.c.obj -c /home/pepe/code/embeded/hello-world/main/sensor.c
In file included from /home/pepe/esp/esp-idf/components/esp_hw_support/include/esp_intr_alloc.h:12,
                 from /home/pepe/esp/esp-idf/components/esp_hw_support/include/esp_cpu.h:21,
                 from /home/pepe/esp/esp-idf/components/esp_hw_support/include/spinlock.h:11,
                 from /home/pepe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:49,
                 from /home/pepe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:57,
                 from /home/pepe/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:69,
                 from /home/pepe/code/embeded/hello-world/main/sensor.c:1:
/home/pepe/code/embeded/hello-world/main/sensor.c: In function 'adc_init':
/home/pepe/code/embeded/hello-world/main/sensor.c:34:53: error: 'adc_handle' undeclared (first use in this function)
   34 |     ESP_ERROR_CHECK(adc_oneshot_new_unit(&adc_cfg, &adc_handle));
      |                                                     ^~~~~~~~~~
/home/pepe/esp/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/pepe/code/embeded/hello-world/main/sensor.c:34:53: note: each undeclared identifier is reported only once for each function it appears in
   34 |     ESP_ERROR_CHECK(adc_oneshot_new_unit(&adc_cfg, &adc_handle));
      |                                                     ^~~~~~~~~~
/home/pepe/esp/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/pepe/code/embeded/hello-world/main/sensor.c: In function 'read_soil_adc':
/home/pepe/code/embeded/hello-world/main/sensor.c:45:38: error: 'adc_handle' undeclared (first use in this function)
   45 |     ESP_ERROR_CHECK(adc_oneshot_read(adc_handle, SOIL_SENSOR_ADC_CHANNEL, &raw));
      |                                      ^~~~~~~~~~
/home/pepe/esp/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
ninja: build stopped: subcommand failed.
